[package]
name = "echoip"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "echoip"
path = "src/main.rs"

[lib]
name = "echoip"
path = "src/lib.rs"

[dependencies]
arc-swap = "1"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
dns-lookup = "3"
flate2 = "1"
fnv = "1"
maxminddb = "0.27"
num-bigint = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tera = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
wiremock = "0.6"
